--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.72.0"
 version = "1.1.0"
 
 [[bin]]
-name = "env-select"
+name = "es"
 path = "src/main.rs"
 
 [dependencies]
@@ -22,7 +22,7 @@ derive_more = "^0.99.17"
 dialoguer = {version = "^0.10.2", default-features = false}
 dotenv-parser = {version = "0.1.3", default-features = false}# Pinned because unpopular
 env_logger = {version = "^0.10.0", default-features = false, features = ["auto-color"]}
-futures = { version = "0.3.30", default-features = false, features = ["std"] }
+futures = {version = "0.3.30", default-features = false, features = ["std"]}
 indexmap = {version = "^2.0.0", features = ["serde"]}
 log = "^0.4.17"
 serde = {version = "^1.0.145", default-features = false, features = ["derive"]}
