--- a/tests/.env-select.toml
+++ b/tests/.env-select.toml
@@ -1,15 +1,16 @@
-[applications.integration-tests.profiles.p1]
+[applications.test.profiles.p1]
 # These *shouldn't* have access to env vars
 pre_export = [
-  {setup = "echo pre setup 1 $VARIABLE1", teardown = "echo pre teardown 1 $VARIABLE1"},
-  {setup = "echo pre setup 2 $VARIABLE1", teardown = "echo pre teardown 2 $VARIABLE1"},
+  {setup = "echo pre setup 1 $VAR1", teardown = "echo pre teardown 1 $VAR1"},
+  {setup = "echo pre setup 2 $VAR1", teardown = "echo pre teardown 2 $VAR1"},
 ]
 # These *should* have access to env vars
 post_export = [
-  {setup = "echo post setup 1 $VARIABLE1", teardown = "echo post teardown 1 $VARIABLE1"},
-  {setup = "echo post setup 2 $VARIABLE1", teardown = "echo post teardown 2 $VARIABLE1"},
+  {setup = "echo post setup 1 $VAR1", teardown = "echo post teardown 1 $VAR1"},
+  {setup = "echo post setup 2 $VAR1", teardown = "echo post teardown 2 $VAR1"},
 ]
-variables.VARIABLE1 = "abc"
-variables.VARIABLE2 = "def"
-variables.VARIABLE3 = {type = "command", command = "echo ghi | cat -"}
-variables.file = {type = "file", path = "vars.env", multiple = ["FILE_VARIABLE1"]}
+variables.VAR1 = "abc"
+variables.VAR2 = {type = "command", command = "echo def | cat -"}
+variables.file = {type = "file", path = "vars.env", multiple = ["FILE_VAR1"]}
+
+[applications.test.profiles.empty]
