--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,23 +19,23 @@ anyhow = {version = "^1.0.65", features = ["backtrace"]}
 clap = {version = "^4.5.19", features = ["derive"]}
 clap_complete = {version = "4.5.32", features = ["unstable-dynamic"]}
 ctrlc = "^3.2.3"
-derive_more = "^0.99.17"
-dialoguer = {version = "^0.10.2", default-features = false}
+derive_more = {version = "^1.0.0", default-features = false, features = ["deref", "display", "from"]}
+dialoguer = {version = "^0.11.0", default-features = false}
 dotenv-parser = {version = "0.1.3", default-features = false}# Pinned because unpopular
-env_logger = {version = "^0.10.0", default-features = false, features = ["auto-color"]}
+env_logger = {version = "^0.11.5", default-features = false, features = ["auto-color"]}
 futures = {version = "0.3.30", default-features = false, features = ["std"]}
 indexmap = {version = "^2.0.0", features = ["serde"]}
 log = "^0.4.17"
 serde = {version = "^1.0.145", default-features = false, features = ["derive"]}
 smol = "2.0.0"
 termcolor = "^1.2.0"
-toml = {version = "^0.7.5", features = ["preserve_order"]}
+toml = {version = "^0.8.19", features = ["preserve_order"]}
 
 [dev-dependencies]
 assert_cmd = {version = "^2.0.11", default-features = false, features = ["color-auto"]}
 pretty_assertions = "^1.4.0"
-rstest = {version = "^0.18.2", default-features = false}
-rstest_reuse = "^0.6.0"
+rstest = {version = "^0.23.0", default-features = false}
+rstest_reuse = "^0.7.0"
 serde_test = "^1.0.165"
 
 # The profile that 'cargo dist' will build with
